--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,3 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -39,7 +31,7 @@ input[type='file'] {
 .container {
   overflow: hidden;
   display: flex;
-  height: 80px;
+  height: 75px;
   width: 100vw;
   margin: 0 auto;
 }
@@ -47,26 +39,20 @@ input[type='file'] {
 .container2 {
   overflow: hidden;
   display: flex;
-  height: 100px;
+  height: 75px;
   width: 100vw;
   margin: 0 auto;
 }
 
 .container div {
-  height: 70px;
+  height: 60px;
   min-width: 200px;
   margin-left: 10px;
   animation: slide 60s linear infinite;
 }
 
 .container2 div {
-  height: 400px;
-  min-width: 300px;
-  margin-left: 10px;
-}
-
-.container2 div {
-  height: 70px;
+  height: 60px;
   min-width: 200px;
   margin-left: 10px;
   animation: slide 60s linear infinite;
@@ -78,20 +64,29 @@ input[type='file'] {
   .container {
     overflow: hidden;
     display: flex;
-    height: 60px;
+    height: 50px;
     width: 100vw;
     margin: 0 auto;
   }
-  .container div {
+
+  .container2 {
+    overflow: hidden;
+    display: flex;
     height: 50px;
-    min-width: 130px;
+    width: 100vw;
+    margin: 0 auto;
+  }
+
+  .container div {
+    height: 45px;
+    min-width: 140px;
     margin-left: 10px;
     animation: slide2 60s linear infinite;
   }
 
   .container2 div {
-    height: 50px;
-    min-width: 130px;
+    height: 45px;
+    min-width: 140px;
     margin-left: 10px;
     animation: slide2 60s linear infinite;
     animation-direction: reverse;
